--- a/.github/workflows/github-actions.demo.yml
+++ b/.github/workflows/github-actions.demo.yml
@@ -20,7 +20,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
-    - run: python3 run hello.py
+    - run: python3 hello.py
 
   deploy-job:
     runs-on: ubuntu-latest
